--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./index.js" type="module" defer></script>
-    <title>Document</title>
+    <title>Shoes</title>
 </head>
 <body>
-    
+    <div class="shoeContainer">
+        
+    </div>
 </body>
 </html>
