add loader when fetching data

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Shoes</title>
 </head>
 <body>
+    <div class="loader" id="loader"></div>
+    <div class="shoeContainer"></div>
+
     <div class="shoeContainer">
 
     </div>
